refactor(frontend/backend/shared): solve refactoring issues ss-497

--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -82,7 +82,7 @@
 	border-color: var(--color-text-error);
 }
 
-.button-pressed {
+.button-ghost {
 	color: var(--color-fill-brand-strong);
 	background-color: var(--color-fill-weak);
 }
