--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,7 +1,6 @@
 .button {
 	position: relative;
 	width: 100%;
-	min-width: 120px;
 	padding: 12px 16px;
 	font-family: var(--font-family);
 	font-size: var(--font-size-small);
@@ -82,6 +81,17 @@
 	color: var(--color-text-error);
 	background: transparent;
 	border-color: var(--color-text-error);
+}
+
+.button-ghost {
+	color: var(--color-fill-brand-strong);
+	background-color: var(--color-fill-weak);
+	border: none;
+}
+
+.button:hover.button-ghost {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
 }
 
 @media (width <= 768px) {
