fix(frontend): rename files, fix tracking logic ss-501

--- a/apps/frontend/src/pages/route-details/styles.module.css
+++ b/apps/frontend/src/pages/route-details/styles.module.css
@@ -39,6 +39,11 @@
 	justify-content: space-between;
 }
 
+.header-controls {
+	display: flex;
+	gap: 8px;
+}
+
 .loader-container {
 	display: flex;
 	flex: 1;
