--- a/apps/frontend/src/pages/user-route-details/styles.module.css
+++ b/apps/frontend/src/pages/user-route-details/styles.module.css
@@ -1,11 +1,12 @@
 .container {
 	position: relative;
-	flex: 1;
+	box-sizing: border-box;
+	height: calc(100vh - 60px);
 }
 
 .button-container {
 	position: absolute;
-	bottom: 2rem;
+	bottom: 48px;
 	left: 50%;
 	z-index: 1000;
 	display: flex;
@@ -18,4 +19,16 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+@media (width <= 768px) {
+	.container {
+		height: calc(100vh - 60px);
+	}
+}
+
+@media (width <= 480px) {
+	.button-container {
+		bottom: 80px;
+	}
 }
