feat(frontend): user route navigate ss-501 (#558)
* feat(backend): add migration ss-349

* feat(frontend): add poi api with getAll method ss-340

* feat(frontend): add poi module, add poi reducer to store ss-340

* feat(frontend): add new icons ss-340

* feat(frontend): add construct page component ss-340

* feat(backend): add planned routes and geometry to routes schema ss-349

* feat(backend): add planned routes module ss-349

* feat(backend): add planned service in construct method ss-349

* feat(backend): update create route vethod ss-349

* fix(backend): fix logic added userId in route create method ss-349

* feat(frontend): add construct route method and async thunk ss-340

* feat(backend): cover with tests ss-349

* feat(backend): update swagger documentaion ss-349

* refactor(backend/shared): rename planned rouutes to planned path ss-349

* refactor(backend/shared): rename planned path message ss-349

* refactor(backend/shared): rename planned path message and migration name ss-349

* refactor(backend): rename construct arguments ss-349

* feat(shared): add basic types, enums and validation schemas ss-347

* feat(backend):add basic services ss-347

* feat(backend): add user_routes table and relationships in ER diagram ss-347

* feat(backend): create user route ss-347

* feat(backend): main module logic ss-347

* feat(backend): error handling ss-347

* refactor(frontend): update styles, change marker type ss-340

* feat(frontend): update select logic, add construct handler ss-340

* feat(frontend): add success toast on route construct ss-340

* refactor(frontend): move SelectOption to common types ss-340

* refactor(frontend): update icon styles ss-340

* feat(frontend): update construct route page styles ss-340

* feat(frontend): add isLoading, onChange and onInputChange props ss-340

* feat(frontend): replace AsyncSelect with Select component ss-340

* feat(frontend): add useDebounce hook ss-340

* feat(frontend): optimize logic, add debounce on search, add

--- a/apps/frontend/src/pages/route-details/styles.module.css
+++ b/apps/frontend/src/pages/route-details/styles.module.css
@@ -40,8 +40,9 @@
 	justify-content: space-between;
 }
 
-.edit-button-container {
-	width: 100px;
+.header-controls {
+	display: flex;
+	gap: 8px;
 }
 
 .loader-container {
@@ -77,6 +78,11 @@
 	align-items: center;
 }
 
-.save-button-container {
+.admin-button-container {
+	width: 100px;
+}
+
+.user-button-container {
 	display: flex;
+	gap: 16px;
 }
