feat(frontend): synchronize explore routes list with the map ss-472

--- a/apps/frontend/src/libs/components/map-provider/styles.module.css
+++ b/apps/frontend/src/libs/components/map-provider/styles.module.css
@@ -18,6 +18,10 @@
 	height: 100%;
 }
 
+.popup-container {
+	display: none;
+}
+
 :global(.mapboxgl-popup-content) {
 	padding: 0;
 	border-radius: 8px;
