--- a/apps/frontend/src/libs/components/route-card/styles.module.css
+++ b/apps/frontend/src/libs/components/route-card/styles.module.css
@@ -1,5 +1,8 @@
 .button {
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
 	padding: 0;
 	margin: 0;
 	font: inherit;
@@ -34,6 +37,12 @@
 	max-width: 400px;
 }
 
+.container {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+}
+
 .image {
 	align-items: center;
 	object-fit: cover;
@@ -51,9 +60,10 @@
 
 .data {
 	display: flex;
-	flex-direction: column;
-	gap: 8px;
-	padding: 8px;
+	gap: 16px;
+	align-items: center;
+	justify-content: space-between;
+	padding: 6px 4px;
 }
 
 .label {
@@ -62,6 +72,30 @@
 	text-overflow: ellipsis;
 	font-size: var(--font-size-h4);
 	font-weight: var(--font-weight-semibold);
-	line-height: 1.2;
+	line-height: 1.4;
 	white-space: nowrap;
+}
+
+.linkButton {
+	display: flex;
+	flex-shrink: 0;
+	align-items: center;
+	justify-content: center;
+	padding: 12px;
+	color: var(--color-text-brand);
+	text-decoration: none;
+	cursor: pointer;
+	outline: none;
+	background: none;
+	border: none;
+	border-radius: 8px;
+	transition: background-color 0.2s ease;
+}
+
+.linkButton:hover {
+	background-color: var(--color-fill-hover);
+}
+
+.linkButton:active {
+	background-color: var(--color-fill-press);
 }
