feat(frontend): synchronize explore routes list with the map ss-472

--- a/apps/frontend/src/assets/css/variables.css
+++ b/apps/frontend/src/assets/css/variables.css
@@ -47,5 +47,6 @@
 	--width-sidebar-collapsed: 74px;
 	--width-sidebar-expanded: 320px;
 	--tabs-navigation-height: 56px;
+	--header-height: 65px;
 	--landing-container-width: 1264px;
 }
