--- a/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
+++ b/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
@@ -1,8 +1,10 @@
 .container {
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
 	width: 464px;
+	max-width: calc(100vw - 64px);
 	height: 100%;
 	padding: 24px 32px;
 	margin: 32px;
@@ -11,6 +13,14 @@
 	scroll-behavior: smooth;
 	background-color: var(--color-base);
 	border-radius: 8px;
+}
+
+@media (width <= 480px) {
+	.container {
+		max-width: calc(100vw - 8px);
+		padding: 12px 16px;
+		margin: 8px;
+	}
 }
 
 .title {
