--- a/apps/frontend/src/libs/components/route-card/styles.module.css
+++ b/apps/frontend/src/libs/components/route-card/styles.module.css
@@ -39,6 +39,13 @@
 	max-width: 400px;
 }
 
+@media (width <= 768px) {
+	.route-card {
+		flex: 0 0 280px;
+		width: 280px;
+	}
+}
+
 .container {
 	position: relative;
 	display: flex;
