--- a/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
+++ b/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
@@ -15,11 +15,36 @@
 	border-radius: 8px;
 }
 
+@media (width <= 1280px) {
+	.container {
+		position: fixed;
+		bottom: 0;
+		left: 56px;
+		z-index: 100;
+		width: calc(100% - 56px);
+		max-width: none;
+		height: auto;
+		padding: 32px 24px;
+		margin: 0;
+	}
+
+	.container .list {
+		flex-direction: row;
+		gap: 16px;
+		padding-bottom: 8px;
+		overflow: auto visible;
+	}
+
+	.title {
+		display: none;
+	}
+}
+
 @media (width <= 480px) {
 	.container {
-		max-width: calc(100vw - 8px);
-		padding: 12px 16px;
-		margin: 8px;
+		bottom: 56px;
+		left: 0;
+		width: 100%;
 	}
 }
 
