--- a/apps/frontend/src/libs/components/feature-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/feature-gallery/styles.module.css
@@ -2,7 +2,7 @@
 	overflow: hidden;
 }
 
-.delete-icon-wrapper {
+.delete-button {
 	position: absolute;
 	top: 8px;
 	right: 8px;
@@ -23,6 +23,7 @@
 
 .slide-wrapper {
 	position: relative;
+	display: grid;
 	width: 100%;
 	height: 100%;
 }
@@ -36,6 +37,7 @@
 }
 
 .left {
+	display: grid;
 	width: 100%;
 	height: 100%;
 	min-height: 300px;
@@ -58,22 +60,11 @@
 		flex-direction: column;
 	}
 
-	.delete-button {
-		max-width: 300px;
+	.slide-wrapper {
+		min-width: 320px;
 	}
 
 	.right {
 		display: flex;
-	}
-
-	.image {
-		width: 100%;
-		max-width: 300px;
-		height: auto;
-	}
-
-	.left .image {
-		max-width: 100%;
-		max-height: 300px;
 	}
 }
