--- a/apps/frontend/src/libs/components/map-location-field/styles.module.css
+++ b/apps/frontend/src/libs/components/map-location-field/styles.module.css
@@ -20,5 +20,5 @@
 
 .map-section-error {
 	background-color: var(--color-fill-error-weak);
-	border: 1px solid var(--color-stroke-error);
+	box-shadow: 0 0 0 1px var(--color-stroke-error);
 }
