--- a/apps/frontend/src/libs/components/textarea/styles.module.css
+++ b/apps/frontend/src/libs/components/textarea/styles.module.css
@@ -18,41 +18,35 @@
 	line-height: 1.5;
 	resize: none;
 	background-color: var(--color-background-base);
-	border: 1px solid var(--color-stroke-strong);
+	border: none;
 	border-radius: 8px;
-	transition: background-color 0.2s ease-in-out;
+	box-shadow: 0 0 0 1px var(--color-stroke-strong) inset;
+	transition:
+		background-color 0.2s ease-in-out,
+		outline 0.1s ease;
 }
 
-.textarea:hover {
-	background-color: var(--color-fill-hover);
-}
-
-.textarea:focus {
+.textarea:not(:disabled):focus-visible {
 	outline: 2px solid var(--color-stroke-focus);
 	outline-offset: 2px;
 	background-color: initial;
-	border: 1px solid var(--color-stroke-strong);
+}
+
+.textarea:hover:not(:disabled) {
+	background-color: var(--color-fill-hover);
 }
 
 .textarea-error {
 	outline: none;
+	box-shadow: 0 0 0 1px var(--color-stroke-error) inset;
+}
+
+.textarea-error:not(:disabled):focus-visible {
+	outline: 2px solid var(--color-stroke-error);
+}
+
+.textarea-error:hover:not(:disabled) {
 	background-color: var(--color-fill-error-weak);
-	border: 1px solid var(--color-stroke-error);
-}
-
-.textarea-error:hover,
-.textarea-error:focus {
-	background-color: var(--color-background-base);
-}
-
-.error {
-	display: inline-flex;
-	gap: 8px;
-	align-items: center;
-	font-size: var(--font-size-tiny);
-	font-weight: var(--font-weight-semibold);
-	line-height: 1.4;
-	color: var(--color-text-error);
 }
 
 .label:focus-within .error {
