--- a/apps/frontend/src/pages/construct-route/libs/components/side-panel/styles.module.css
+++ b/apps/frontend/src/pages/construct-route/libs/components/side-panel/styles.module.css
@@ -29,7 +29,8 @@
 	flex-shrink: 0;
 	margin: 0;
 	font-size: var(--font-size-h3);
-	line-height: 32px;
+	font-weight: var(--font-weight-semibold);
+	line-height: 1.2;
 }
 
 .body {
@@ -41,6 +42,7 @@
 }
 
 .list-title {
+	margin: 0;
 	font-size: var(--font-size-h4);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.4;
