--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -1,3 +1,17 @@
+.map-container {
+	display: grid;
+	overflow: hidden;
+	border-radius: 8px;
+}
+
+.image {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 8px;
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
@@ -34,20 +48,20 @@
 	justify-content: center;
 }
 
-.edit-mode-controls {
+.controls-container {
 	display: flex;
-	gap: 8px;
+	column-gap: 8px;
 }
 
 @media (width <=1440px) {
-	.poi-container {
+	.container {
 		max-width: 1000px;
 		padding: 80px 48px;
 	}
 }
 
 @media (width <=768px) {
-	.poi-container {
+	.container {
 		max-width: none;
 		padding: 40px 32px;
 	}
