--- a/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
@@ -19,6 +19,18 @@
 .cards-wrapper {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 16px;
+	gap: 64px;
 	width: 100%;
+}
+
+@media (width <=991px) {
+	.cards-wrapper {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media (width <=768px) {
+	.cards-wrapper {
+		grid-template-columns: 1fr;
+	}
 }
