--- a/apps/frontend/src/libs/components/checkbox/styles.module.css
+++ b/apps/frontend/src/libs/components/checkbox/styles.module.css
@@ -12,9 +12,13 @@
 	justify-content: center;
 	width: 20px;
 	height: 20px;
+	color: var(--color-text-inverse-strong);
 	border: 1px solid var(--color-stroke-strong);
 	border-radius: 4px;
-	transition: all 0.2s ease;
+	transition:
+		background-color 0.1s ease,
+		border-color 0.2s ease,
+		outline 0.1s ease;
 }
 
 .input:checked + .custom-checkbox {
