--- a/apps/frontend/src/libs/components/checkbox/styles.module.css
+++ b/apps/frontend/src/libs/components/checkbox/styles.module.css
@@ -12,13 +12,21 @@
 	justify-content: center;
 	width: 20px;
 	height: 20px;
-	background-color: var(--color-fill-grey);
-	border: 2px solid var(--color-stroke-weak);
+	color: var(--color-text-inverse-strong);
+	border: 1px solid var(--color-stroke-strong);
 	border-radius: 4px;
-	transition: all 0.2s ease;
+	transition:
+		background-color 0.1s ease,
+		border-color 0.2s ease,
+		outline 0.1s ease;
 }
 
 .input:checked + .custom-checkbox {
 	background-color: var(--color-fill-brand-strong);
 	border-color: var(--color-stroke-selected);
+}
+
+.input:not(:disabled):focus-visible + .custom-checkbox {
+	outline: 2px solid var(--color-stroke-focus);
+	outline-offset: 2px;
 }
