--- a/apps/frontend/src/pages/explore/styles.module.css
+++ b/apps/frontend/src/pages/explore/styles.module.css
@@ -2,17 +2,10 @@
 	position: relative;
 	display: flex;
 	flex-grow: 1;
-}
-
-.routes-container {
-	position: absolute;
-	top: 32px;
-	bottom: 32px;
-	left: 32px;
-	z-index: 2;
-	max-height: 100%;
+	min-height: 0;
 }
 
 .container {
 	flex-grow: 1;
+	min-height: 0;
 }
