--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -41,13 +41,17 @@
 		outline 0.1s ease;
 }
 
+.input-left-icon-space {
+	padding-left: 48px;
+}
+
 .input:focus-visible {
 	outline: 2px solid var(--color-stroke-focus);
 	outline-offset: 2px;
 	background-color: initial;
 }
 
-.input-container:not(:has(.icon-right:hover)) .input:hover {
+.input-container:not(:has(.icon-right:hover, .icon-left:hover)) .input:hover {
 	background-color: var(--color-fill-hover);
 }
 
@@ -64,7 +68,8 @@
 	outline: 2px solid var(--color-stroke-error);
 }
 
-.input-container:not(:has(.icon-right:hover)) .input-error:hover {
+.input-container:not(:has(.icon-right:hover, .icon-left:hover))
+	.input-error:hover {
 	background-color: var(--color-fill-error-weak);
 }
 
@@ -72,6 +77,17 @@
 	position: absolute;
 	top: 50%;
 	right: 0;
+	display: flex;
+	height: 100%;
+	padding: 8px;
+	color: var(--color-icon-neutral);
+	transform: translateY(-50%);
+}
+
+.icon-left {
+	position: absolute;
+	top: 50%;
+	z-index: 1;
 	display: flex;
 	height: 100%;
 	padding: 8px;
