fix(frontend): dashboard routes history ss-581 (#583)
* feat(frontend): center map on route ss-581

* refactor(frontend): update dashboard styles ss-581

* refactor(frontend): add fitBound to map, update styles ss-581

* refactor(frontend): change naming ss-581

--- a/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
@@ -1,6 +1,9 @@
 .label {
 	margin: 0 0 12px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	text-align: start;
+	white-space: nowrap;
 }
 
 .card {
@@ -19,6 +22,26 @@
 .cards-wrapper {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 16px;
+	gap: 64px;
 	width: 100%;
+}
+
+@media (width <=1024px) {
+	.cards-wrapper {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.card {
+		max-width: 330px;
+	}
+}
+
+@media (width <=768px) {
+	.cards-wrapper {
+		grid-template-columns: 1fr;
+	}
+
+	.card {
+		max-width: 350px;
+	}
 }
