feat(frontend): add link to review ss-582

--- a/apps/frontend/src/libs/components/review-card/styles.module.css
+++ b/apps/frontend/src/libs/components/review-card/styles.module.css
@@ -6,10 +6,12 @@
 	background: var(--color-base);
 }
 
-.head {
+.link {
 	display: flex;
-	gap: 24px;
+	gap: 20px;
 	align-items: center;
+	max-width: max-content;
+	text-decoration: none;
 }
 
 .username {
