--- a/apps/frontend/src/pages/points-of-interest-details/libs/components/route-gallery/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/libs/components/route-gallery/styles.module.css
@@ -11,13 +11,19 @@
 	line-height: 1.3;
 }
 
-.cards {
+.cards-list {
 	display: flex;
 	gap: 16px;
 	padding: 0;
 	padding-bottom: 16px;
 	margin: 0;
 	overflow-x: auto;
+}
+
+.map-card {
+	width: 100%;
+	max-width: 390px;
+	list-style: none;
 }
 
 @media (width <= 991px) {
