--- a/apps/frontend/src/pages/public-profile/styles.module.css
+++ b/apps/frontend/src/pages/public-profile/styles.module.css
@@ -50,3 +50,34 @@
 .follow-button-container {
 	width: fit-content;
 }
+
+.activities-container {
+	display: flex;
+	flex-direction: column;
+	gap: 36px;
+	width: 100%;
+}
+
+.activities-header {
+	width: 100%;
+	border-bottom: 1px solid var(--color-stroke-weak);
+}
+
+.activity-label {
+	display: flex;
+	align-items: center;
+	width: fit-content;
+	height: 48px;
+	font-size: var(--font-size-small);
+	font-weight: var(--font-weight-semibold);
+	border-bottom: 2px solid var(--color-stroke-selected);
+}
+
+.no-activities-label {
+	width: 100%;
+	height: 48px;
+	font-size: var(--font-size-small);
+	font-weight: var(--font-weight-regular);
+	color: var(--color-text-weak);
+	text-align: center;
+}
