--- a/apps/frontend/src/pages/public-profile/styles.module.css
+++ b/apps/frontend/src/pages/public-profile/styles.module.css
@@ -50,3 +50,19 @@
 .follow-button-container {
 	width: fit-content;
 }
+
+.error-container {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	align-items: center;
+	justify-content: space-between;
+	width: 360px;
+	margin: auto;
+}
+
+.not-found {
+	font-size: var(--font-size-h2);
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-text-strong);
+}
