--- a/apps/frontend/src/libs/components/route-card/styles.module.css
+++ b/apps/frontend/src/libs/components/route-card/styles.module.css
@@ -1,39 +1,53 @@
-.route-card {
+.card {
 	display: flex;
 	flex-shrink: 0;
 	flex-direction: column;
-	gap: 16px;
+	row-gap: 16px;
 	width: 100%;
-	max-width: 400px;
+	max-width: 390px;
+	min-height: 240px;
+	list-style: none;
 }
 
-.route-card .image {
-	align-items: center;
+.card-content {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	height: 100%;
+	text-decoration: none;
+}
+
+.image {
+	display: block;
+	width: 100%;
+	height: 100%;
+	max-height: 240px;
 	object-fit: cover;
-}
-
-.route-card .image-placeholder {
-	background-color: var(--color-fill-grey);
-}
-
-.route-card .image,
-.route-card .image-placeholder {
-	height: 240px;
 	border-radius: 8px;
 }
 
-.route-card .data {
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
-}
-
-.route-card .label {
+.title {
 	margin: 0;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: var(--font-size-h4);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.2;
+	color: var(--color-text-strong);
 	white-space: nowrap;
+}
+
+.event-disable {
+	pointer-events: none;
+}
+
+@media (width <= 991px) {
+	.card {
+		max-width: 300px;
+	}
+
+	.title {
+		font-size: var(--font-size-h5);
+		white-space: normal;
+	}
 }
