refactor(frontend): change gap and width according to the review ss-537

--- a/apps/frontend/src/pages/public-profile/styles.module.css
+++ b/apps/frontend/src/pages/public-profile/styles.module.css
@@ -54,10 +54,10 @@
 .error-container {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 24px;
 	align-items: center;
 	justify-content: space-between;
-	width: 360px;
+	max-width: 360px;
 	margin: auto;
 }
 
