--- a/apps/frontend/src/libs/components/table/libs/components/table-body/styles.module.css
+++ b/apps/frontend/src/libs/components/table/libs/components/table-body/styles.module.css
@@ -3,14 +3,8 @@
 }
 
 .cell {
-	display: flex;
-	align-items: center;
-	min-height: 56px;
+	height: 56px;
 	padding: 8px 24px;
-	border-bottom: 1px solid var(--color-stroke-weak);
-}
-
-.cell-content-wrapper {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: var(--font-size-small);
@@ -18,6 +12,7 @@
 	line-height: 1.5;
 	color: var(--color-text-strong);
 	white-space: nowrap;
+	border-bottom: 1px solid var(--color-stroke-weak);
 }
 
 .body .row:last-child .cell {
