--- a/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
@@ -22,3 +22,18 @@
 	gap: 16px;
 	width: 100%;
 }
+
+.loader-container {
+	display: flex;
+	flex: 1;
+	align-items: center;
+	justify-content: center;
+}
+
+.empty-placeholder {
+	display: flex;
+	flex: 1;
+	align-items: center;
+	justify-content: center;
+	color: var(--color-text-weak);
+}
