fix(frontend): update notification popover styles ss-607

--- a/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/notifications-popover/styles.module.css
+++ b/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/notifications-popover/styles.module.css
@@ -57,9 +57,9 @@
 	text-align: center;
 }
 
-@media (width <= 768px) {
+@media (width <=768px) {
 	.content {
-		left: 0;
+		right: 10px;
 		min-width: 210px;
 	}
 }
