--- a/apps/frontend/src/pages/route-details/styles.module.css
+++ b/apps/frontend/src/pages/route-details/styles.module.css
@@ -36,7 +36,8 @@
 
 .header-container {
 	display: flex;
-	column-gap: 16px;
+	flex-wrap: wrap-reverse;
+	gap: 16px;
 	align-items: flex-end;
 	justify-content: space-between;
 }
@@ -50,7 +51,7 @@
 
 .controls-container {
 	display: flex;
-	column-gap: 8px;
+	gap: 8px;
 }
 
 .upload-image-button-container {
