fix(frontend): improve history page responsiveness ss-1

--- a/apps/frontend/src/pages/dashboard/libs/components/card/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/libs/components/card/styles.module.css
@@ -26,3 +26,13 @@
 	overflow: hidden;
 	border-radius: 8px;
 }
+
+@media (width <= 480px) {
+	.card {
+		min-width: 100%;
+	}
+
+	.map-container {
+		height: 260px;
+	}
+}
