--- a/apps/frontend/src/pages/dashboard/libs/components/tabs/user-history/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/libs/components/tabs/user-history/styles.module.css
@@ -20,3 +20,10 @@
 	justify-content: center;
 	color: var(--color-text-weak);
 }
+
+@media (width <= 480px) {
+	.cards-wrapper {
+		display: flex;
+		flex-direction: column;
+	}
+}
