--- a/apps/frontend/src/pages/route-details/styles.module.css
+++ b/apps/frontend/src/pages/route-details/styles.module.css
@@ -36,7 +36,7 @@
 
 .header-container {
 	display: flex;
-	column-gap: 16px;
+	gap: 16px;
 	align-items: flex-end;
 	justify-content: space-between;
 }
@@ -50,23 +50,41 @@
 
 .controls-container {
 	display: flex;
-	column-gap: 8px;
+	column-gap: 16px;
 }
 
 .upload-image-button-container {
 	margin-right: auto;
 }
 
-@media (width <=1440px) {
+@media (width <= 1440px) {
 	.container {
 		max-width: 1000px;
 		padding: 80px 48px;
 	}
 }
 
-@media (width <=768px) {
+@media (width <= 768px) {
 	.container {
 		max-width: none;
 		padding: 40px 32px;
+	}
+
+	.header-container {
+		flex-direction: column;
+	}
+
+	.controls-container {
+		justify-content: flex-end;
+	}
+}
+
+@media (width <= 480px) {
+	.container {
+		padding: 24px;
+	}
+
+	.label {
+		font-size: var(--font-size-h2);
 	}
 }
