feat(frontend/backend/shared): display routes cards ss-507 (#595)
* feat(backend): route image upload endpoint ss-476

* fix(backend): test ss-476

* feat(frontend): upload button, actions ss-476

* feat(backend/frontend): deleting image ss-476

* chore(backend/frontend): merge main ss-476

* fix(frontend): file re-upload error ss-476

* fix(frontend): delete button too wide on a mobile screen ss-476

* refactor(backend/frontend): route-image deletes via route-api ss-476

* refactor(frontend): slides interface ss-476

* feat(frontend): aws image delete ss-476

* refactor(frontend): delete-button, upload-button styles ss-476

* fix(frontend): delete button shows only after edit ss-476

* fix(backend): route-repository-test ss-476

* chore(backend/frontend): merge main ss-476

* refactor(frontend): use-ref type ss-476

* feat(frontend): map-provide on route-details page ss-476

* refactor(frontend): remove map-provider mock data ss-476

* refactor(backend): image types ss-476

* fix(frontend): pois-details page content ss-476

* refactor(frontend): feature-gallery styles ss-476

* refactor(frontend): feature-gallery styles ss-476

* refactor(backend): routes-entity imports ss-476

* refactor(backend): create-route repository ss-476

* feat(frontend): revert routes gallery ss-497

* feat(backend): include routes images into poi details response ss-497

* feat(backend/frontend): display routes-card related data ss-497

* feat(backend/frontend): display routes-card for explore page ss-497

* fix(frontend): fix route-card map height ss-497

* feat(frontend): replace image placeholder with a map ss-507

* feat(backend/frontend): replace route images array with cover image prop ss-507

---------

Co-authored-by: timosh-yura <tron15963@gmail.com>
Co-authored-by: timosh-yura <79027258+timosh-yura@users.noreply.github.com>

--- a/apps/frontend/src/libs/components/route-card/styles.module.css
+++ b/apps/frontend/src/libs/components/route-card/styles.module.css
@@ -54,11 +54,12 @@
 
 .image {
 	align-items: center;
+	width: 100%;
 	object-fit: cover;
 }
 
 .image-placeholder {
-	background-color: var(--color-fill-grey);
+	pointer-events: none;
 }
 
 .image,
