style(frontend): changed spaces ss-539

--- a/apps/frontend/src/pages/public-profile/styles.module.css
+++ b/apps/frontend/src/pages/public-profile/styles.module.css
@@ -32,7 +32,12 @@
 .user-info-details {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	gap: 12px;
+}
+
+.details {
+	gap: 4px;
+	width: 100%;
 }
 
 .details-name {
