--- a/apps/frontend/src/pages/route-details/styles.module.css
+++ b/apps/frontend/src/pages/route-details/styles.module.css
@@ -36,6 +36,7 @@
 
 .header-container {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 16px;
 	align-items: flex-end;
 	justify-content: space-between;
@@ -50,7 +51,7 @@
 
 .controls-container {
 	display: flex;
-	gap: 16px;
+	gap: 8px;
 }
 
 .upload-image-button-container {
@@ -68,14 +69,6 @@
 	.container {
 		max-width: none;
 		padding: 40px 32px;
-	}
-
-	.header-container {
-		flex-direction: column;
-	}
-
-	.controls-container {
-		justify-content: flex-end;
 	}
 }
 
