fix(frontend): add space between follow button and label ss-539 (#623)
* fix(frontend): add space between follow button and label ss-539

* style(frontend): changed spaces ss-539

--- a/apps/frontend/src/pages/public-profile/styles.module.css
+++ b/apps/frontend/src/pages/public-profile/styles.module.css
@@ -32,10 +32,16 @@
 .user-info-details {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	gap: 12px;
+}
+
+.details {
+	gap: 4px;
+	width: 100%;
 }
 
 .details-name {
+	margin: 0;
 	font-size: var(--font-size-h3);
 	font-weight: var(--font-weight-semibold);
 	color: var(--color-text-strong);
