feat(frontend): add landing footer ss-626

--- a/apps/frontend/src/assets/css/variables.css
+++ b/apps/frontend/src/assets/css/variables.css
@@ -29,6 +29,7 @@
 	--color-shadow-strong: hsl(0deg 0% 0% / 7.8%);
 	--color-base-overlay: hsl(0deg 0% 0% / 80%);
 	--color-route-line: hsl(129deg 71% 63% / 100%);
+	--color-landing-footer: hsl(162deg 91% 5% / 100%);
 	--shadow-raised:
 		0 2px 4px -2px hsl(0deg 0% 0% / 8%), 0 4px 8px -2px hsl(0deg 0% 0% / 4%);
 	--font-family: "Inter", sans-serif;
