--- a/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
+++ b/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
@@ -4,7 +4,6 @@
 	flex-direction: column;
 	gap: 24px;
 	width: 464px;
-	max-width: calc(100vw - 64px);
 	height: 100%;
 	max-height: calc(100vh - 128px);
 	padding: 0 32px 24px;
@@ -16,7 +15,7 @@
 	border-radius: 8px;
 }
 
-@media (width > 1280px) {
+@media (orientation: landscape) {
 	.sticky-header {
 		position: sticky;
 		top: 0;
@@ -32,12 +31,18 @@
 	}
 }
 
-@media (width <= 1280px) {
+@media (width <= 1280px) and (orientation: landscape) {
+	.container {
+		width: 330px;
+		padding: 0 16px 24px;
+	}
+}
+
+@media (width <= 1280px) and (orientation: portrait) {
 	.container {
 		position: fixed;
 		bottom: 0;
 		left: 0;
-		z-index: 100;
 		width: 100%;
 		max-width: none;
 		max-height: 350px;
@@ -77,7 +82,7 @@
 	}
 }
 
-@media (width <= 480px) {
+@media (width <= 640px) {
 	.container {
 		bottom: 0;
 		left: 0;
@@ -109,7 +114,6 @@
 	flex-direction: column;
 	gap: 8px;
 	font-family: var(--font-family);
-	font-size: var(--font-size-p-14);
 	font-weight: var(--font-weight-medium);
 	color: var(--color-text-strong);
 }
@@ -129,7 +133,6 @@
 	justify-content: center;
 	height: 200px;
 	font-family: var(--font-family);
-	font-size: var(--font-size-p-16);
 	color: var(--color-text-weak);
 	text-align: center;
 }
@@ -138,7 +141,6 @@
 	display: flex;
 	flex-direction: column;
 	padding: 12px;
-	font-size: var(--font-size-p-14);
 	color: var(--color-warning-text);
 	background-color: var(--color-warning-background);
 	border: 1px solid var(--color-warning-border);
@@ -150,7 +152,6 @@
 	align-items: center;
 	justify-content: center;
 	padding: 12px;
-	font-size: var(--font-size-p-14);
 	color: var(--color-error-text);
 	background-color: var(--color-error-background);
 	border: 1px solid var(--color-error-border);
@@ -179,7 +180,7 @@
 	opacity: 0;
 }
 
-@media (width <= 1280px) {
+@media (width <= 1280px) and (orientation: portrait) {
 	.load-more-trigger {
 		flex-shrink: 0;
 		width: 1px;
