feat(frontend): adjust zoom level for maps and improve momoization ss-1

--- a/apps/frontend/src/pages/points-of-interest-details/libs/components/route-card/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/libs/components/route-card/styles.module.css
@@ -6,7 +6,9 @@
 	width: 100%;
 	max-width: 390px;
 	min-height: 240px;
+	overflow: hidden;
 	list-style: none;
+	border-radius: 8px;
 }
 
 .card-content {
